--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,11 @@
     <title>My Contact Location</title>
 </head>
 <body>
-    <p> <image.src>sarthik.jpg</image.src></p>
+    <!-- Image section -->
+    <p>
+        <img src="sarthik.jpg" alt="My Photo" width="200">
+    </p>
+
     <h2>📍 My Location</h2>
     <p><a href="https://www.google.com/maps?q=30.3470639,77.9383083" target="_blank">
         Open in Google Maps</a></p>
