--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 <body>
     <!-- Image section -->
     <p>
-        <img src="sarthik.jpg" alt="My Photo" width="200">
+        <img src="https://github.com/Priyotest25/test_contact_page/blob/main/sarthik.jpg" alt="My Photo" width="200">
     </p>
 
     <h2>📍 My Location</h2>
